auto-test/tests/chapter_16/invalid_types/extra_credit/compound_assign_to_string.c

int main(void) {
    "My string" += 1;
    return 0;
}